大体框架完成，还差shell部分，希望增加一个历史查询功能，能看到之前执行的转换操作。